k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nefentus-app
  namespace: nefentus
  labels:
    app: nefentus-app
spec:
  selector:
    matchLabels:
      app: nefentus-app
  replicas: 1
  template:
    metadata:
      labels:
        app: nefentus-app
    spec:
      containers:
      - name: nefentus-container
        image: 798065433500.dkr.ecr.eu-central-1.amazonaws.com/nefentus-image:v0.1.6
        ports:
          - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
        imagePullPolicy: Always
        resources:
          limits:
            memory: "1024Mi"
            cpu: "300m"
