k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: nefentus
  name: nefentus-service
  labels:
    app: nefentus-app
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
spec:
  type: NodePort
  selector:
    app: nefentus-app
  ports:
  - port: 80
    targetPort: 8080
